wip on faiing test